--- a/Animation/index.html
+++ b/Animation/index.html
@@ -32,7 +32,7 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 // get the data
-d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/1_OneNum.csv", function(data) {
+d3.csv("data.csv", function(data) {
 
   // X axis: scale and draw:
   var x = d3.scaleLinear()
@@ -52,7 +52,7 @@ d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_data
 
     // set the parameters for the histogram
     var histogram = d3.histogram()
-        .value(function(d) { return d.price; })   // I need to give the vector of value
+        .value(function(d) { return d.value; })   // I need to give the vector of value
         .domain(x.domain())  // then the domain of the graphic
         .thresholds(x.ticks(nBin)); // then the numbers of bins
 
